# PrototypingProject

./: Erkenntnisse.md  Nach_Besprechung.md  delta_app.py  example.parquet  find_file_or_folder.py  flet_app.py  hunt_showdown_herausforderung.csv  main_hunt.py  pandas_app.py  pick_team.py  pyproject.toml
delta/: delta_polars.py  quickstart.py  spark_quickstart.py
delta/tmp/delta-table/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.json.crc  .00000000000000000004.json.crc  .00000000000000000005.checkpoint.parquet.crc  .00000000000000000005.json.crc  .00000000000000000006.checkpoint.parquet.crc  .00000000000000000006.json.crc  ._last_checkpoint.crc  _last_checkpoint
delta/tmp/delta-table/version=1/: .part-00000-63ba091b-ec0b-45d9-b73d-abd4b7c954bb.c000.snappy.parquet.crc  part-00000-63ba091b-ec0b-45d9-b73d-abd4b7c954bb.c000.snappy.parquet
delta/tmp/delta-table/version=2/: .part-00000-f53fee58-81fe-49e6-b4e6-3652ee65bec6.c000.snappy.parquet.crc  part-00000-f53fee58-81fe-49e6-b4e6-3652ee65bec6.c000.snappy.parquet
delta/tmp/delta-table/version=3/: .part-00000-3fddea26-8387-41f1-bb5a-3ecd3937546f.c000.snappy.parquet.crc  part-00000-3fddea26-8387-41f1-bb5a-3ecd3937546f.c000.snappy.parquet
delta/tmp/polars-delta-table/__watermark=2024-02-02%3A%2013%3A20%3A36.638505/: 0-90ed1f3a-1945-43f8-aa41-c94e824c8a8e-0.parquet
delta/tmp/polars-delta-table/__watermark=2024-02-02%3A%2014%3A06%3A58.715138/: 1-9484bf4c-468c-432f-846b-5759a75f275f-0.parquet
hudi/: quickstart.py
(+130 files in other folders)
