[tool.poetry]
name = "prototypingproject"
version = "0.1.0"
description = ""
authors = ["MarvinBeGood <46404767+MarvinBeGood@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
flet = "^0.5.1"
black = {extras = ["d"], version = "^23.1.0"}
polars = "^0.17.9"
pyspark = ">=3.3.0,<3.4.0"
delta-spark = "^2.3.0"
cdktf = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
