[tool.poetry]
name = "prototypingproject"
version = "0.1.0"
description = ""
authors = ["MarvinBeGood <46404767+MarvinBeGood@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.1.0"
polars = {extras = ["deltalake"], version = "^0.20.5"}
pandas = "^2.2.0"
delta-spark = "2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
